--- a/src/app/pages/grafical/grafical.component.html
+++ b/src/app/pages/grafical/grafical.component.html
@@ -1,1 +1,23 @@
-<p>grafical works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Sales"
+                  [labels]="labels1"
+                  [data]="data1"></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona title="Produccion"></app-dona>
+    </div>
+    
+
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Perdidas"></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona title="Yield"></app-dona>
+    </div>
+    
+
+</div>
