--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -40,3 +40,6 @@
     </div>
 
 </div>
+<!-- con esto le decimos a mi aplicacion que 
+cualquiera que use pages component podra usar el modal -->
+<app-modal-imagen></app-modal-imagen>
